HADOOP-1527 Region server won't start because logdir exists
git-svn-id: https://svn.apache.org/repos/asf/lucene/hadoop/trunk@568700 13f79535-47bb-0310-9956-ffa450edef68